--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pendaftaran Karakter OC - EternalSMP</title>
+  <title>Pendaftaran OC - EternalSMP</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -211,7 +211,7 @@
       </div>
       <!-- Lore & Tujuan -->
       <label for="lore">📖 Lore & Background Karakter</label>
-      <textarea id="lore" name="lore" minlength="300" maxlength="3000" required></textarea>
+      <textarea id="lore" name="lore" minlength="300" maxlength="6000" required></textarea>
       <div id="loreCount" class="char-counter">Jumlah karakter: 0 / minimal 300</div>
 
       <label for="tujuan">🎯 Tujuan & Motivasi Karakter</label>
@@ -220,9 +220,6 @@
 
       <!-- Tombol Aksi -->
       <div style="text-align:center; margin-top: 1.5rem;">
-        <button type="button" class="btn glow-btn" onclick="playClick(); window.open('eternalsmp-oc-form.html', '_blank')">
-          👁️ Lihat Preview
-        </button>
         <button type="button" class="btn glow-btn" onclick="playClick(); submitToDiscord()">
           📨 Kirim Pendaftaran
         </button>
@@ -262,7 +259,7 @@
   }
 
   updateCharCount("sifat", 50);
-  updateCharCount("lore", 300, 3000);
+  updateCharCount("lore", 300, 6000);
   updateCharCount("tujuan", 100, 500);
 
   // 🔐 Validasi input tambahan
