--- a/page2.html
+++ b/page2.html
@@ -158,26 +158,26 @@
           <label for="race">🧬 Ras Karakter</label>
           <select id="race" name="race" required>
             <option value="">-- Pilih --</option>
-            <option value="Euria">Euria - Peri cahaya</option>
-            <option value="Graveth">Graveth - Ahli sihir gelap</option>
-            <option value="Maredien">Maredien - Bangsawan diplomatis</option>
-            <option value="Heretic">Heretic - Pengguna sihir terlarang</option>
-            <option value="Diablonic">Diablonic - Iblis kuat</option>
-            <option value="Laurian">Laurian - Pelindung hutan</option>
+            <option value="Euria">Euria</option>
+            <option value="Graveth">Graveth</option>
+            <option value="Maredien">Maredien</option>
+            <option value="Heretic">Heretic</option>
+            <option value="Diablonic">Diablonic</option>
+            <option value="Laurian">Laurian</option>
           </select>
 
           <label for="class">⚔️ Class Tempur</label>
           <select id="class" name="class" required>
             <option value="">-- Pilih --</option>
-            <option>Warrior - Petarung seimbang</option>
-            <option>Berserker - Liar & brutal</option>
-            <option>Tank - Pertahanan tinggi</option>
-            <option>Lancer - Cepat & menusuk</option>
-            <option>Rogue - Licik & lincah</option>
-            <option>Hunter - Jarak jauh</option>
-            <option>Ronin - Pendekar bebas</option>
-            <option>Swordmage - Pedang & sihir</option>
-            <option>Priest - Penyembuh</option>
+            <option>Warrior</option>
+            <option>Berserker</option>
+            <option>Tank</option>
+            <option>Lancer</option>
+            <option>Rogue</option>
+            <option>Hunter</option>
+            <option>Ronin</option>
+            <option>Swordmage</option>
+            <option>Priest</option>
           </select>
         </div>
 
